--- a/PageMockups/index.html
+++ b/PageMockups/index.html
@@ -1,1 +1,25 @@
-index.html
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset=utf-8>
+		<title>Louisville Vocal Project</title>
+		<link rel="stylesheet" href="../css/normalize.css">
+		<link rel="stylesheet" href="../css/styles.css">
+		<meta name="viewport" content="width=device-width initial-scale=1.0">
+	</head>
+<body>
+	<header>
+		<h1><a href="#">LVP</a></h1>
+		<div class="nav">
+			<ul>
+				<li><a href="#">Events</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Listen</a></li>
+				<li><a href="#">Watch</a></li>
+			</ul>
+		</div>
+	</header>
+	
+
+</body>
+</html>
