--- a/PageMockups/index.html
+++ b/PageMockups/index.html
@@ -10,14 +10,14 @@
 <body>
 	<header>
 		<h1><a href="#">LVP</a></h1>
-		<div class="nav">
+		<nav>
 			<ul>
 				<li><a href="#">Events</a></li>
 				<li><a href="#">About</a></li>
 				<li><a href="#">Listen</a></li>
 				<li><a href="#">Watch</a></li>
 			</ul>
-		</div>
+		</nav>
 	</header>
 	
 
