--- a/PageMockups/index.html
+++ b/PageMockups/index.html
@@ -4,22 +4,44 @@
 		<meta charset=utf-8>
 		<title>Louisville Vocal Project</title>
 		<link rel="stylesheet" href="../css/normalize.css">
+		<link rel="stylesheet" href="../css/bootstrap.min.css">
+		<link rel="stylesheet" href="../css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="../css/styles.css">
 		<meta name="viewport" content="width=device-width initial-scale=1.0">
 	</head>
 <body>
-	<header>
-		<h1><a href="#">LVP</a></h1>
-		<nav>
-			<ul>
-				<li><a href="#">Events</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Listen</a></li>
-				<li><a href="#">Watch</a></li>
-			</ul>
-		</nav>
-	</header>
-	
+		
+	<!-- *********** NAVBAR ************* -->
+
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">LVP</a>
+	    </div>
+
+					<!-- ********* Navigation Links ************* -->
+
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav navbar-right">
+	        <li class="active"><a href="#">Events<span class="sr-only">(current)</span></a></li>
+	        <li><a href="#">About</a></li>
+	        <li><a href="#">Listen</a></li>
+	        <li><a href="#">Watch</a></li>
+	      </ul>
+	    </div>
+	  </div>
+	</nav>
+
+	<!-- ************ SCRIPTS ************ -->
+
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script src="../js/bootstrap.js"></script>
 
 </body>
 </html>
