styled mobile nav

--- a/PageMockups/index.html
+++ b/PageMockups/index.html
@@ -29,14 +29,18 @@
 
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
-	        <li class="active"><a href="#">Events<span class="sr-only">(current)</span></a></li>
-	        <li><a href="#">About</a></li>
+	        <li class=""><a href="events.html">Events</a></li>
+	        <li class=""><a href="about.html">About</a></li>
 	        <li><a href="#">Listen</a></li>
 	        <li><a href="#">Watch</a></li>
 	      </ul>
 	    </div>
 	  </div>
 	</nav>
+
+	<!-- ************* BANNER IMAGE ************ -->
+
+	<div class="banner"></div>
 
 	<!-- ************ SCRIPTS ************ -->
 
