--- a/PageMockups/index.html
+++ b/PageMockups/index.html
@@ -42,6 +42,22 @@
 
 	<div class="banner"></div>
 
+	<!-- ************* EVENTS SECTION ************ -->
+
+	<div class="event">
+		<h1><a href="events.html">Events</a></h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
+		<button>Buy Tickets</button>
+	</div>
+
+	<!-- ************* EVENTS SECTION ************ -->
+
+	<div class="listen">
+		<h1><a href="#">Listen</a></h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
+		<button>Play</button>
+	</div>
+
 	<!-- ************ SCRIPTS ************ -->
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
