--- a/PageMockups/index.html
+++ b/PageMockups/index.html
@@ -58,6 +58,16 @@
 		<button>Play</button>
 	</div>
 
+	<!-- ************* FOOTER ************ -->
+
+	<div class="footer">
+		<p>&copy; 2015 Louisville Vocal Project</p>
+		<p>Design by Rick Mook</p>
+		<ul class="social-links">
+			<li><a href="#"><img src="../img/facebook.png"></a></li>
+			<li><a href="#"><img src="../img/email.png"></a></li>
+		</ul>
+	</div>
 	<!-- ************ SCRIPTS ************ -->
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
