styled social icons and footer; styled header logo

--- a/PageMockups/index.html
+++ b/PageMockups/index.html
@@ -61,11 +61,10 @@
 	<!-- ************* FOOTER ************ -->
 
 	<div class="footer">
-		<p>&copy; 2015 Louisville Vocal Project</p>
-		<p>Design by Rick Mook</p>
+		<p>&copy; 2015 Louisville Vocal Project<br>Design by Rick Mook</p>
 		<ul class="social-links">
-			<li><a href="#"><img src="../img/facebook.png"></a></li>
-			<li><a href="#"><img src="../img/email.png"></a></li>
+			<li class="social-icon"><a href="#"><img src="../img/facebook.png"></a></li>
+			<li class="social-icon"><a href="#"><img src="../img/email.png"></a></li>
 		</ul>
 	</div>
 	<!-- ************ SCRIPTS ************ -->
