cleared elements under nav; added events.html file

--- a/PageMockups/events.html
+++ b/PageMockups/events.html
@@ -25,7 +25,7 @@
 	      <a class="navbar-brand" href="#">LVP</a>
 	    </div>
 
-					<!-- ********* Navigation Links ************* -->
+			<!-- ********* Navigation Links ************* -->
 
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
@@ -41,27 +41,38 @@
 	<!-- ************* Filler for space under nav ******** -->
 
 	<div class="filler"></div>
-
-	<!-- ************* BANNER IMAGE ************ -->
-
-	<div class="banner"></div>
-
+	
 	<!-- ************* EVENTS SECTION ************ -->
 
 	<div class="event">
-		<h1><a href="events.html">Events</a></h1>
+		<h1><a href="events.html">Event 1</a></h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
 		<button>Buy Tickets</button>
 	</div>
 
 	<!-- ************* EVENTS SECTION ************ -->
 
-	<div class="listen">
-		<h1><a href="#">Listen</a></h1>
+	<div class="event">
+		<h1><a href="events.html">Event 2</a></h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
-		<button>Play</button>
+		<button>Buy Tickets</button>
 	</div>
 
+	<!-- ************* EVENTS SECTION ************ -->
+
+	<div class="event">
+		<h1><a href="events.html">Event 3</a></h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
+		<button>Buy Tickets</button>
+	</div>
+
+	<!-- ************* EVENTS SECTION ************ -->
+
+	<div class="event">
+		<h1><a href="events.html">Event 4</a></h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
+		<button>Buy Tickets</button>
+	</div>
 	<!-- ************* FOOTER ************ -->
 
 	<div class="footer">
