added about.html file; minor styling revisions.

--- a/PageMockups/about.html
+++ b/PageMockups/about.html
@@ -25,7 +25,7 @@
 	      <a class="navbar-brand" href="index.html">LVP</a>
 	    </div>
 
-			<!-- ********* Navigation Links ************* -->
+					<!-- ********* Navigation Links ************* -->
 
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
@@ -46,37 +46,17 @@
 
 	<div class="banner"></div>
 
-	<!-- ************* EVENTS SECTION ************ -->
+	<!-- ************* ABOUT SECTION************ -->
 
-	<div class="event">
-		<h1><a href="events.html">Event 1</a></h1>
+	<div class="about">
+		<h2>About Louisville Vocal Project</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
-		<button>Buy Tickets</button>
+		<p>Person 1 does something</p>
+		<p>Person 2 does something else</p>
+		<p>Visit affiliated group 1</p>
+		<p>Visit affiliated group 2</p>
 	</div>
 
-	<!-- ************* EVENTS SECTION ************ -->
-
-	<div class="event">
-		<h1><a href="events.html">Event 2</a></h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
-		<button>Buy Tickets</button>
-	</div>
-
-	<!-- ************* EVENTS SECTION ************ -->
-
-	<div class="event">
-		<h1><a href="events.html">Event 3</a></h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
-		<button>Buy Tickets</button>
-	</div>
-
-	<!-- ************* EVENTS SECTION ************ -->
-
-	<div class="event">
-		<h1><a href="events.html">Event 4</a></h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
-		<button>Buy Tickets</button>
-	</div>
 	<!-- ************* FOOTER ************ -->
 
 	<div class="footer">
