--- a/PageMockups/index.html
+++ b/PageMockups/index.html
@@ -54,7 +54,7 @@
 		<button>Buy Tickets</button>
 	</div>
 
-	<!-- ************* EVENTS SECTION ************ -->
+	<!-- ************* LISTEN SECTION ************ -->
 
 	<div class="listen">
 		<h1><a href="#">Listen</a></h1>
