added desktop-view secitons to index.html

--- a/PageMockups/index.html
+++ b/PageMockups/index.html
@@ -46,21 +46,52 @@
 
 	<div class="banner"></div>
 
-	<!-- ************* EVENTS SECTION ************ -->
+	<!-- GRID SYSTEM -->
 
-	<div class="event">
-		<h1><a href="events.html">Events</a></h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
-		<button>Buy Tickets</button>
+	<div class="container-fluid">	
+
+		<!-- first row -->
+
+		<div class="row">
+			<!-- ************* EVENTS SECTION ************ -->
+
+			<div class="event col-sm-8">
+				<h1><a href="events.html">Events</a></h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
+				<button>Buy Tickets</button>
+			</div>
+
+			<!-- ************* About SECTION ************ -->
+
+			<div class="splash-about col-sm-4">
+				<h2>About Louisville Vocal Project</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
+			</div>
+		</div>
+
+		<!-- second row -->
+
+		<div class="row">
+			<!-- ************* LISTEN SECTION ************ -->
+
+			<div class="listen col-sm-8">
+				<h1><a href="#">Listen</a></h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
+				<button>Play</button>
+			</div>
+
+			<!-- ************* WATCH SECTION ************ -->
+
+			<div class="watch col-sm-4">
+				<h1><a href="#">Watch</a></h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
+				<div class="screen"></div>
+				<button>Play</button>
+			</div>
+		</div>
 	</div>
+	
 
-	<!-- ************* LISTEN SECTION ************ -->
-
-	<div class="listen">
-		<h1><a href="#">Listen</a></h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
-		<button>Play</button>
-	</div>
 
 	<!-- ************* FOOTER ************ -->
 
