styled desktop views

--- a/PageMockups/index.html
+++ b/PageMockups/index.html
@@ -55,7 +55,7 @@
 		<div class="row">
 			<!-- ************* EVENTS SECTION ************ -->
 
-			<div class="event col-sm-8">
+			<div class="event col-sm-7">
 				<h1><a href="events.html">Events</a></h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
 				<button>Buy Tickets</button>
@@ -63,8 +63,8 @@
 
 			<!-- ************* About SECTION ************ -->
 
-			<div class="splash-about col-sm-4">
-				<h2>About Louisville Vocal Project</h2>
+			<div class="splash-about col-sm-5">
+				<h2><a href="about.html">About</a> Louisville Vocal Project</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
 			</div>
 		</div>
@@ -74,7 +74,7 @@
 		<div class="row">
 			<!-- ************* LISTEN SECTION ************ -->
 
-			<div class="listen col-sm-8">
+			<div class="listen col-sm-7">
 				<h1><a href="#">Listen</a></h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
 				<button>Play</button>
@@ -82,11 +82,12 @@
 
 			<!-- ************* WATCH SECTION ************ -->
 
-			<div class="watch col-sm-4">
+			<div class="watch col-sm-5">
 				<h1><a href="#">Watch</a></h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat nibh eu lobortis malesuada.</p>
-				<div class="screen"></div>
-				<button>Play</button>
+				<div class="screen">
+					<button>Play</button>
+				</div>
 			</div>
 		</div>
 	</div>
