building non-BS nav

--- a/PageMockups/about.html
+++ b/PageMockups/about.html
@@ -7,35 +7,21 @@
 		<link rel="stylesheet" href="../css/bootstrap.min.css">
 		<link rel="stylesheet" href="../css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="../css/styles.css">
-		<meta name="viewport" content="width=device-width initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	</head>
 <body>
 		
 	<!-- *********** NAVBAR ************* -->
 
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="index.html">LVP</a>
-	    </div>
-
-					<!-- ********* Navigation Links ************* -->
-
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav navbar-right">
+	<nav class="clearfix" role="navigation">
+		<ul class="clearfix">
+			<li><a href="#">Watch</a></li>
+			<li><a href="#">Listen</a></li>
+			<li class=""><a href="about.html">About</a></li>
 	        <li class=""><a href="events.html">Events</a></li>
-	        <li class=""><a href="about.html">About</a></li>
-	        <li><a href="#">Listen</a></li>
-	        <li><a href="#">Watch</a></li>
-	      </ul>
-	    </div>
-	  </div>
+
+	     </ul>
+	     <a href="#" id="pull">Menu</a>
 	</nav>
 
 	<!-- ************* Filler for space under nav ******** -->
