--- a/PageMockups/events.html
+++ b/PageMockups/events.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset=utf-8>
 		<title>Louisville Vocal Project</title>
-		<link rel="stylesheet" href="../css/normalize.css">
-		<link rel="stylesheet" href="../css/bootstrap.min.css">
-		<link rel="stylesheet" href="../css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="../css/styles.css">
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="css/styles.css">
 		<meta name="viewport" content="width=device-width initial-scale=1.0">
 	</head>
 <body>
@@ -82,14 +82,14 @@
 	<div class="footer">
 		<p>&copy; 2015 Louisville Vocal Project<br>Design by Rick Mook</p>
 		<ul class="social-links">
-			<li class="social-icon"><a href="#"><img src="../img/facebook.png"></a></li>
-			<li class="social-icon"><a href="#"><img src="../img/email.png"></a></li>
+			<li class="social-icon"><a href="#"><img src="img/facebook.png"></a></li>
+			<li class="social-icon"><a href="#"><img src="img/email.png"></a></li>
 		</ul>
 	</div>
 	<!-- ************ SCRIPTS ************ -->
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-	<script src="../js/bootstrap.js"></script>
+	<script src="js/bootstrap.js"></script>
 
 </body>
 </html>
