--- a/PageMockups/about.html
+++ b/PageMockups/about.html
@@ -55,6 +55,7 @@
 	<!-- ************ SCRIPTS ************ -->
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script type="text/javascript" src="../js/script.js"></script>
 	<script src="../js/bootstrap.js"></script>
 
 </body>
