styling of navbar

--- a/PageMockups/about.html
+++ b/PageMockups/about.html
@@ -21,7 +21,7 @@
 	        <li class=""><a href="events.html">Events</a></li>
 
 	     </ul>
-	     <a href="#" id="pull">Menu</a>
+	     <a href="#" id="pull"></a>
 	</nav>
 
 	<!-- ************* Filler for space under nav ******** -->
