javascript that works... imagine that!

--- a/PageMockups/about.html
+++ b/PageMockups/about.html
@@ -14,14 +14,13 @@
 	<!-- *********** NAVBAR ************* -->
 
 	<nav class="clearfix" role="navigation">
-		<ul class="clearfix">
+		<a href="#" id="pull"></a>
+		<ul class="clearfix" id="menu">
 			<li><a href="#">Watch</a></li>
 			<li><a href="#">Listen</a></li>
 			<li class=""><a href="about.html">About</a></li>
 	        <li class=""><a href="events.html">Events</a></li>
-
 	     </ul>
-	     <a href="#" id="pull"></a>
 	</nav>
 
 	<!-- ************* Filler for space under nav ******** -->
